k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: roller
  labels:
    apps: web-based
  annotations:
    type: roller
