k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: roller-ingress
spec:
  rules:
    - http:
        paths:
          - path: /roll/*
            backend:
              serviceName: roller
              servicePort: 3000
